--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Product preview card component</title>
+  
 </head>
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<main class="container">
+  <div class="preview">
+    <img src="images/image-product-desktop.jpg" alt="preview">
   </div>
+  <div class="details">
+    <h2>PERFUME</h2>
+    <h1>Gabrielle Essence Eau De Parfum</h1>
+    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+    
+    <div class="pricing">
+      <h3>$149.99</h3>
+      <h4>$169.99</h4>
+    </div>
+    <!-- <h5><img src="images/icon-cart.svg" alt="cart" class="cart">Add to Cart</h5> -->
+    <h5>Add to Cart</h5>
+  </div>
+
+  <div class="attribution">
+    <div>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </div>
+    <div>Coded by <a href="#">Aldrin Fernandez</a>.</div>
+  </div>
+</main>
+  
+  
+  
 </body>
 </html>
