--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       <h3>$149.99</h3>
       <h4>$169.99</h4>
     </div>
-    <!-- <h5><img src="images/icon-cart.svg" alt="cart" class="cart">Add to Cart</h5> -->
-    <h5>Add to Cart</h5>
+    <div  class="cart">
+      <img src="images/icon-cart.svg" alt="cart">
+      <h5>Add to Cart</h5>
+    </div>
   </div>
 
   <div class="attribution">
@@ -36,8 +38,7 @@
     <div>Coded by <a href="#">Aldrin Fernandez</a>.</div>
   </div>
 </main>
-  
-  
-  
 </body>
 </html>
+
+<!-- browser screen size in laptop is 1326 * 538 -->
