--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   
 </head>
 <body>
-<main class="container">
+<main >
+  <div class="container">
   <div class="preview">
     <img src="images/image-product-desktop.jpg" alt="preview">
   </div>
@@ -29,7 +30,7 @@
     </div>
     <div  class="cart">
       <img src="images/icon-cart.svg" alt="cart">
-      <h5>Add to Cart</h5>
+      Add to Cart
     </div>
   </div>
 
@@ -37,6 +38,7 @@
     <div>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </div>
     <div>Coded by <a href="#">Aldrin Fernandez</a>.</div>
   </div>
+</div>
 </main>
 </body>
 </html>
